<resources>
    <string name="app_name">Instafarm</string>
    <string name="action_settings">Settings</string>
    <string name="testtext">testtext</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment1">This is the Fragment 1: Settings!</string>
    <string name="fragment2">This is the Fragment 2: Profile!</string>
    <string name="fragment3">This is the Fragment 3: Bot!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="registration_button">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="no_text"> </string>
    <string name="registration_message">You are not registered yet. Use the registration button to complete your registration.</string>
    <string name="registration_failed">Your email or password is already in use</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_sign_in_response">Unknowns sign in response</string>
    <string-array name="autocomplete">
        <item>johnpaul@yahoo.com</item>
        <item>marykate@yahoo.com</item>
        <item>kelvinjames@yahoo.com</item>
        <item>henrysweart@gmail.com</item>
        <item>gracepowell@yahoo.com</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="loading">Loading</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="Logged_in_as">Logged in as:</string>
    <string name="or_sign_in_with_google">or sign in with google</string>
    <string name="Instafarm">Instafarm</string>
    <string name="Payment">Payment</string>
    <string name="Login">Login</string>
    <string name="google_title_text">Google sign in</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnect</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>
    <string name="custom_token">Custom Token</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="exit_app">Press again to exit</string>
    <string name="addtag">Add Tag</string>
    <string name="input_content">Add a hashtag (without #)</string>
    <string name="hashtag_hint">photooftheday</string>
    <string name="input_prefill" />
    <string name="logoutcontent">Do you really want to sign out from your Google Account?</string>
    <string name="logout">Logout?</string>
    <string name="agree">Yes</string>
    <string name="disagree">No</string>

    <string name="failed_token">Client Failed to retrieve token from server</string>
    <string name="BraintreeFragment_initialized">BraintreeFragment is ready to use</string>
    <string name="issues_with_authorization">There was an issue with your authorization string</string>
    <string name="token_failed">Fail to retrieve client token </string>
    <string name="buy_brand_new_laptop">BUY BRAND NEW LAPTOP</string>
    <string name="buy_now">BUY NOW</string>
</resources>
